--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@visidevi/basebutton": "0.0.2",
+    "@visidevi/greenbtn": "0.0.1",
+    "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
     "register-service-worker": "^1.7.1",
+    "sass-loader": "^8.0.2",
+    "vee-validate": "^3.3.1",
     "vue": "^2.6.11",
+    "vue-credit-card-field": "^0.3.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
