--- a/base1/package.json
+++ b/base1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "base1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,15 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
-    "node-sass": "^4.14.1",
-    "numeral": "^2.0.6",
-    "register-service-worker": "^1.7.1",
-    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
-    "vue-credit-card-field": "^0.3.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -26,7 +19,6 @@
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-e2e-cypress": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-pwa": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-unit-jest": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
@@ -41,8 +33,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
